anthos-bundles/pci-dss-v3.2.1/1.1.4_resources-have-required-labels.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pci-dss-v3.2.1-resources-have-required-labels
  labels:
    policycontroller.gke.io/bundleName: pci-dss-v3.2.1
  annotations:
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'pci-dss-v3.2.1',
        bundleDisplayName: 'PCI DSS v3.2.1',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/anthos-bundles/pci-dss-v3.2.1',
        bundleVersion: '202301.1',
        bundleDescription: 'Use the PCI DSS v3.2.1 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the Payment Card Industry (PCI) Data Security Standard (DSS) v3.2.1.',
        controlNumbers: '[1.1.4]',
        severity: 'UNASSIGNED',
        description: 'Requires all apps to contain a specified label to meet firewall requirements.',
        remediation: 'All apps must have a valid firewall audit label. Check the app's firewall and add a label with the format `pci-dss-firewall-audit: "pci-dss-2022q1"` where the suffix is {Year}q{Quarter}.',
        minimumTemplateLibraryVersion: '1.11.1'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - apps
        kinds:
          - ReplicaSet
          - Deployment
          - StatefulSet
          - DaemonSet
    excludedNamespaces:
      - kube-system
      - kube-node-lease
      - kube-public
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - gke-connect
      - istio-system
      - asm-system
      - cert-manager
      - gke-system
      - capi-system
      - anthos-identity-service
      - vm-system
      - gke-managed-metrics-server
      - capi-kubeadm-bootstrap-system
  parameters:
    message: All apps must have a valid pci-dss-firewall-audit label.
    labels:
      - key: pci-dss-firewall-audit
        allowedRegex: ^pci-dss-[0-9]{4}q[1-4]$
