anthos-bundles/pci-dss-v3.2.1/1.2.2_8.1.2_enforce-managed-by-configmanagement-label.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pci-dss-v3.2.1-enforce-managed-by-configmanagement-label
  labels:
    policycontroller.gke.io/bundleName: pci-dss-v3.2.1
  annotations:
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'pci-dss-v3.2.1',
        bundleDisplayName: 'PCI DSS v3.2.1',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/anthos-bundles/pci-dss-v3.2.1',
        bundleVersion: '202301.1',
        bundleDescription: 'Use the PCI DSS v3.2.1 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the Payment Card Industry (PCI) Data Security Standard (DSS) v3.2.1.',
        controlNumbers: '[1.2.2, 8.1.2]',
        severity: 'UNASSIGNED',
        description: 'Requires a valid `app.kubernetes.io/managed-by=` label on RoleBinding resources.',
        remediation: 'RoleBinding resources must have a specified value for `app.kubernetes.io/managed-by=` label. See "Labels and Selectors" for more information: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/',
        minimumTemplateLibraryVersion: '1.11.1'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - rbac.authorization.k8s.io
      kinds:
      - RoleBinding
    excludedNamespaces:
    - kube-system
    - kube-public
    - gatekeeper-system
    - config-management-monitoring
    - resource-group-system
    - gke-connect
    - istio-system
    - asm-system
    - poco-trial
    - cert-manager
    - gke-system
    - capi-system
    - anthos-identity-service
    - capi-kubeadm-bootstrap-system
    - vm-system
    - gke-managed-metrics-server
  parameters:
    labels:
    - allowedRegex: ^(.+\.googleapis\.com|configmanagement\.gke\.io)$
      key: app.kubernetes.io/managed-by
    message: 'This resource is missing the label: app.kubernetes.io/managed-by=configmanagement.gke.io'
