anthos-bundles/pci-dss-v3.2.1/5.1.1_5.3-require-av-daemonset.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireDaemonsets
metadata:
  name: pci-dss-v3.2.1-require-av-daemonset
  labels:
    policycontroller.gke.io/bundleName: pci-dss-v3.2.1
  annotations:
    policycontroller.gke.io/bundleVersion: "202312.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'pci-dss-v3.2.1',
        bundleDisplayName: 'PCI DSS v3.2.1',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-pci-dss-v3',
        bundleVersion: '202312.0',
        bundleDescription: 'Use the PCI DSS v3.2.1 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the Payment Card Industry (PCI) Data Security Standard (DSS) v3.2.1.',
        controlNumbers: '[5.1.1,5.3]',
        severity: 'UNSPECIFIED',
        description: 'Requires the presence of an Anti-Virus daemonset.',
        remediation: 'Add an Anti-Virus daemonset, such as ClamAV, with the specified name and namespace.',
        minimumTemplateLibraryVersion: '1.14.0',
        constraintHash: 'e7305f51bffc49ec90ffbb4a8c27697b6635cb8153399d7c2e453e7da76b9a20'
      }"
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Namespace
  enforcementAction: dryrun
  parameters:
    requiredDaemonsets:
      - name: clamav
        namespace: pci-dss-av
