anthos-bundles/pci-dss-v3.2.1/5.3_6.1_6.4_enforce-config-management.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sEnforceConfigManagement
metadata:
  name: pci-dss-v3.2.1-enforce-config-management
  labels:
    policycontroller.gke.io/bundleName: pci-dss-v3.2.1
  annotations:
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'pci-dss-v3.2.1',
        bundleDisplayName: 'PCI DSS v3.2.1',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/anthos-bundles/pci-dss-v3.2.1',
        bundleVersion: '202302.1',
        bundleDescription: 'Use the PCI DSS v3.2.1 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the Payment Card Industry (PCI) Data Security Standard (DSS) v3.2.1.',
        controlNumbers: '[5.3, 6.1, 6.4]',
        severity: 'UNASSIGNED',
        description: 'Enforces the presence and enablement of Anthos Config Management.',
        remediation: 'Requires Anthos Config Management. Ensure Anthos Config Management is enabled and running on the cluster. See "Install Anthos Config Management" for more information: https://cloud.google.com/anthos-config-management/docs/how-to/install-anthos-config-management',
        minimumTemplateLibraryVersion: '1.14.0'
      }"
spec:
  enforcementAction: dryrun
