anthos-bundles/pci-dss-v3.2.1/8.1.5_8.2.3_8.5_block-secrets-of-type-basic-auth.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockObjectsOfType
metadata:
  name: pci-dss-v3.2.1-block-secrets-of-type-basic-auth
  labels:
    policycontroller.gke.io/bundleName: pci-dss-v3.2.1
  annotations:
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'pci-dss-v3.2.1',
        bundleDisplayName: 'PCI DSS v3.2.1',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/anthos-bundles/pci-dss-v3.2.1',
        bundleVersion: '202309.0',
        bundleDescription: 'Use the PCI DSS v3.2.1 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the Payment Card Industry (PCI) Data Security Standard (DSS) v3.2.1.',
        controlNumbers: '[8.1.5,8.2.3,8.5]',
        severity: 'UNASSIGNED',
        description: 'Restricts the use of basic-auth type secrets.',
        remediation: 'Cannot use basic-auth type secrets. Use an alternative. See "Secrets" for more information: https://kubernetes.io/docs/concepts/configuration/secret/',
        minimumTemplateLibraryVersion: '1.14.0'
      }"
    policycontroller.gke.io/bundleVersion: "202309.0"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Secret
  parameters:
    forbiddenTypes:
      - kubernetes.io/basic-auth
